--- a/automations.yaml
+++ b/automations.yaml
@@ -212,7 +212,7 @@
       tag: you_got_mail
   mode: single
 - id: '1688117249626'
-  alias: Boutons Hue - Bouton ON Entrée maintenu appuyé
+  alias: Boutons Hue - Bouton Entrée
   description: ''
   trigger:
   - device_id: 64185ca2086c2ebd7b976a43ef0c89fd
@@ -221,28 +221,32 @@
     type: repeat
     subtype: 1
     unique_id: c1c9f277-e27a-4340-9962-2206cc0d7e3a
-  condition: []
-  action:
-  - service: script.reset_lights_day_area
-    data: {}
-  mode: single
-- id: '1688117356091'
-  alias: Boutons Hue - Bouton OFF Entrée maintenu appuyé
-  description: ''
-  trigger:
+    id: 'on'
   - device_id: 64185ca2086c2ebd7b976a43ef0c89fd
     domain: hue
     platform: device
     type: repeat
     subtype: 4
     unique_id: 7564eab9-3cc9-4321-890c-1b9f1465f108
+    id: 'off'
   condition: []
   action:
-  - service: script.leave_home
-    data: {}
+  - choose:
+    - conditions:
+      - condition: trigger
+        id: 'on'
+      sequence:
+      - service: script.reset_lights_day_area
+        data: {}
+    - conditions:
+      - condition: trigger
+        id: 'off'
+      sequence:
+      - service: script.leave_home
+        data: {}
   mode: single
 - id: '1688117431729'
-  alias: Boutons Hue - Bouton ON Salon Couloir maintenu appuyé
+  alias: Boutons Hue - Bouton Salon Couloir
   description: ''
   trigger:
   - device_id: efa42240bac38d83b77963e7fd5bb5ac
@@ -251,29 +255,33 @@
     type: repeat
     subtype: 1
     unique_id: 9df3f0e5-001b-4c7b-9c5d-a96a8b391edd
-  condition: []
-  action:
-  - service: script.reset_lights_day_area
-    data: {}
-  mode: single
-- id: '1688117473124'
-  alias: Boutons Hue - Bouton OFF Salon Couloir maintenu appuyé
-  description: ''
-  trigger:
+    id: 'on'
   - device_id: efa42240bac38d83b77963e7fd5bb5ac
     domain: hue
     platform: device
     type: repeat
     subtype: 4
     unique_id: 73e97207-29d2-4078-8304-9e918425fe48
+    id: 'off'
   condition: []
   action:
-  - service: light.turn_off
-    data: {}
-    target:
-      entity_id:
-      - light.lumieres_rez_de_chaussee
-      - light.exterieur
+  - choose:
+    - conditions:
+      - condition: trigger
+        id: 'on'
+      sequence:
+      - service: script.reset_lights_day_area
+        data: {}
+    - conditions:
+      - condition: trigger
+        id: 'off'
+      sequence:
+      - service: light.turn_off
+        data: {}
+        target:
+          entity_id:
+          - light.lumieres_rez_de_chaussee
+          - light.exterieur
   mode: single
 - id: '1688118075093'
   alias: "Machine a Laver Intelligente - \U0001F514 Notifier cycle de lavage terminé"
